RESOLVED FIXED93859
REGRESSION (r109851): Video controls do not render
https://bugs.webkit.org/show_bug.cgi?id=93859
Summary REGRESSION (r109851): Video controls do not render
Jer Noble
Reported 2012-08-13 09:34:34 PDT
Created attachment 158018 [details] WebKitVideoContrlsBug - Test Case Video controls do not correctly un-hide when the mouse cursor enters the video element. Regression range: http://trac.webkit.org/log/trunk/?rev=109923&stop_rev=109837 Likely culprit: http://trac.webkit.org/changeset/109851
Attachments
WebKitVideoContrlsBug - Test Case (4.09 MB, application/zip)
2012-08-13 09:34 PDT, Jer Noble
no flags
Patch (6.73 KB, patch)
2012-08-13 17:38 PDT, Adrienne Walker
simon.fraser: review+
webkit.review.bot: commit-queue-
Archive of layout-test-results from gce-cr-linux-06 (308.02 KB, application/zip)
2012-08-13 18:55 PDT, WebKit Review Bot
no flags
Jer Noble
Comment 1 2012-08-13 09:35:05 PDT
Jer Noble
Comment 2 2012-08-13 09:35:37 PDT
From the original bug: "This is a Safari 6.0 regression. It worked fine in Safari 5.1.7. It is also a Chrome 18 regression (worked fine in v17). It still occurs in the june 2, 2012 webkit nightly."
Jer Noble
Comment 3 2012-08-13 09:38:04 PDT
Adrienne Walker
Comment 4 2012-08-13 17:38:16 PDT
WebKit Review Bot
Comment 5 2012-08-13 18:55:21 PDT
Comment on attachment 158163 [details] Patch Attachment 158163 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13492344 New failing tests: compositing/video/video-controls-layer-creation.html
WebKit Review Bot
Comment 6 2012-08-13 18:55:25 PDT
Created attachment 158184 [details] Archive of layout-test-results from gce-cr-linux-06 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-06 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Adrienne Walker
Comment 7 2012-08-14 13:44:49 PDT
Note You need to log in before you can comment on or make changes to this bug.